--- a/DetExCal/lib/UI/DetExCal.ui
+++ b/DetExCal/lib/UI/DetExCal.ui
@@ -332,7 +332,7 @@
                     <double>100.000000000000000</double>
                    </property>
                    <property name="value">
-                    <double>60.000000000000000</double>
+                    <double>50.000000000000000</double>
                    </property>
                   </widget>
                  </item>
@@ -548,17 +548,23 @@
                      <height>24</height>
                     </size>
                    </property>
+                   <property name="suffix">
+                    <string> %</string>
+                   </property>
+                   <property name="decimals">
+                    <number>1</number>
+                   </property>
                    <property name="minimum">
-                    <double>0.010000000000000</double>
+                    <double>0.000000000000000</double>
                    </property>
                    <property name="maximum">
-                    <double>1.000000000000000</double>
+                    <double>100.000000000000000</double>
                    </property>
                    <property name="singleStep">
-                    <double>0.010000000000000</double>
+                    <double>1.000000000000000</double>
                    </property>
                    <property name="value">
-                    <double>0.600000000000000</double>
+                    <double>60.000000000000000</double>
                    </property>
                   </widget>
                  </item>
