some heavy fixes

--- a/DetExCal/lib/UI/DetExCal.ui
+++ b/DetExCal/lib/UI/DetExCal.ui
@@ -488,11 +488,14 @@
                    <property name="minimum">
                     <double>0.100000000000000</double>
                    </property>
+                   <property name="maximum">
+                    <double>1000.000000000000000</double>
+                   </property>
                    <property name="singleStep">
                     <double>0.100000000000000</double>
                    </property>
                    <property name="value">
-                    <double>1.300000000000000</double>
+                    <double>130.000000000000000</double>
                    </property>
                   </widget>
                  </item>
@@ -716,22 +719,22 @@
                     </size>
                    </property>
                    <property name="suffix">
-                    <string> [nm]</string>
+                    <string> [um]</string>
                    </property>
                    <property name="decimals">
-                    <number>1</number>
+                    <number>3</number>
                    </property>
                    <property name="minimum">
-                    <double>10.000000000000000</double>
+                    <double>0.100000000000000</double>
                    </property>
                    <property name="maximum">
-                    <double>1000.000000000000000</double>
-                   </property>
-                   <property name="singleStep">
                     <double>10.000000000000000</double>
                    </property>
+                   <property name="singleStep">
+                    <double>0.100000000000000</double>
+                   </property>
                    <property name="value">
-                    <double>550.000000000000000</double>
+                    <double>0.550000000000000</double>
                    </property>
                   </widget>
                  </item>
